--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "vue": "^3.3.2",
-    "vue-router": "^4.2.0"
+    "vue-axios": "^3.5.2",
+    "vue-router": "^4.2.0",
+    "vue3-cookies": "^1.0.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
